--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>WebStudio</title>
           <link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
           <link rel="stylesheet" href="./css/style.css"/>
+         
   </head>
   <body class="body">
       <header class="header">
+        <div class="container">
               <a href="" class="header-logo link"><span class="header-span link">Web</span>Studio</a>
-          <nav>
+          <nav class="header-navigation">
               <ul class="header-list list">
               <li class="header-pages"><a class="header-link link" href="./index.html">Studio</a></li>
               <li class="header-pages"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
@@ -22,13 +25,17 @@
                 <li class="header-info link"><a class="header-mailo link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-info link"><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
                      </ul>
+                    </div>
                 </header>
                 <main>
                     <section class="section">
+                        <div class="container">
                         <h1 class="section-headline">Effective Solutions Your Business</h1>
                     <button type="button" class="section-btn">Order Service</button>
-                    </section> 
+                    </div>         
+                </section> 
                     <section class="skills">
+                        <div class="container">
                         <h2 class="skills-visually-hidden">Skills</h2>
                         <ul  class="skills-list list">
                         <li class="skills-pages link"><h3 class="skills-caption">Strategy</h3>
@@ -39,19 +46,23 @@
                         <p class="skills-paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
                         <li class="skills-pages link"><h3 class="skills-caption">Technologies</h3>
                         <p class="skills-paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li> 
-                        </ul>   
+                        </ul>
+                        </div>   
                     </section>
                     <section class="image">
+                      <div class="container">
                         <h2 class="image-caption">What are we doing</h2>
                         <ul class="image-list list">
                         <li class="link"><img src="./images/imagine1.jpg" alt="computer" width="360" height="300"/></li>
                         <li class="link"><img src="./images/imagine2.jpg" alt="computer" width="360" height="300"/></li>
                         <li class="link"><img src="./images/imagine3.jpg" alt="phoneinhand" width="360" height="300"/></li>
                         </ul>
+                      </div>
                     </section>
                     <section class="info">
-                        <h2 class="info-pre-caption">Our Team</h2>
-                        <ul class="info-list list">
+                      <div class="container">
+                    <h2 class="info-pre-caption">Our Team</h2>
+                    <ul class="info-list list">
                     <li class="info-item"><img src="./images/img2.1.jpg" alt="it"/>
                     <h3 class="info-caption">Mark Guerrero</h3> 
                     <p class="info-paragraph">Product Designer</p></li>
@@ -65,11 +76,14 @@
                     <h3 class="info-caption">Daniel Wilson</h3> 
                     <p class="info-paragraph">UI Designer</p></li>
                        </ul>
+                      </div>
                     </section>
                       </main>
                       <footer class="footer">
+                        <div class="container">
                         <a href="" class="footer-logo link"><span class="footer-span link">Web</span>Studio</a>
                         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                        </div>
                       </footer>
                 </body>
                 </html>
