--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,9 @@
 </head>
 <body class="body">
     <header class="header">
+      <div class="container">
         <a href="" class="header-logo link"><span class="header-span link">Web</span>Studio</a>
-          <nav>
+          <nav class="header-navigation">
               <ul class="header-list list">
               <li class="header-pages "><a href="./index.html" class="header-link link">Studio</a></li>
               <li class="header-pages "><a href="./portfolio.html" class="header-link link">Portfolio</a></li>
@@ -22,9 +23,11 @@
                 <li class="header-info "><a class="header-mailo link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-info "><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
                      </ul>
+      </div>
     </header>
     <main class="main">
         <section class="portfolio">
+          <div class="container">
         <h1 class="portfolio-visually-hidden">Portfolio</h1>
         <ul class="portfolio-list list">
         <li class="list"><button class="portfolio-button behind" type="button">All</button></li>
@@ -33,40 +36,43 @@
         <li class="list"><button class="portfolio-button behind" type="button">Design</button></li>
         <li class="list"><button class="portfolio-button behind" type="button">Marketing</button></li>
         </ul> 
-         <ul class="portfolio-list list">
-            <li><a href="" class="link"><img src="./images/img1.jpg" alt="menu"  width="360" height="300"/>
+         <ul class="portfolio-navigation list">
+            <li class="border"><a href="" class="link"><img src="./images/img1.jpg" alt="menu"  width="360" height="300"/>
             <h2 class="portfolio-caption">Banking App Interface Concept</h2>
             <p class="portfolio-paragraph">App</p></a></li>
-            <li><a href="" class="link"><img src="./images/img2.jpg" alt="paywithphone"  width="360" height="300"/>
+            <li class="border"><a href="" class="link"><img src="./images/img2.jpg" alt="paywithphone"  width="360" height="300"/>
             <h2 class="portfolio-caption">Cashless Payment</h2>
             <p class="portfolio-paragraph link">Marketing</p></a></li>
-            <li><a href="" class="link" class="link"><img src="./images/img3.jpg" alt="computerwithphone"  width="360" height="300"/>
+            <li class="border"><a href="" class="link" class="link"><img src="./images/img3.jpg" alt="computerwithphone"  width="360" height="300"/>
             <h2 class="portfolio-caption">Meditaion App</h2>
             <p class="portfolio-paragraph">App</p></a></li>
-            <li><a href="" class="link"><img src="./images/img4.jpg" alt="car"  width="360" height="300"/>
+            <li class="border"><a href="" class="link"><img src="./images/img4.jpg" alt="car"  width="360" height="300"/>
             <h2 class="portfolio-caption">Taxi Service</h2>
             <p class="portfolio-paragraph">Marketing</p></a></li>
-            <li><a href="" class="link"><img src="./images/img5.jpg" alt="gallery"  width="360" height="300"/>
+            <li class="border"><a href="" class="link"><img src="./images/img5.jpg" alt="gallery"  width="360" height="300"/>
             <h2 class="portfolio-caption">Screen Illustrations</h2>
             <p class="portfolio-paragraph">Design</p></a></li>
-            <li><a href="" class="link"><img src="./images/img6.jpg" alt="listen"  width="360" height="300"/>
+            <li class="border"><a href="" class="link"><img src="./images/img6.jpg" alt="listen"  width="360" height="300"/>
             <h2 class="portfolio-caption">Online Courses</h2>
             <p class="portfolio-paragraph">Marketing</p></a></li>
-            <li><a href="" class="link"><img src="./images/img7.jpg" alt="site"  width="360" height="300"/>
+            <li class="border"><a href="" class="link"><img src="./images/img7.jpg" alt="site"  width="360" height="300"/>
             <h2 class="portfolio-caption">Instagram Stories Concept</h2>
             <p class="portfolio-paragraph">Design</p></a></li>
-            <li><a href="" class="link"><img src="./images/img8.jpg" alt="food"  width="360" height="300"/>
+            <li class="border"><a href="" class="link"><img src="./images/img8.jpg" alt="food"  width="360" height="300"/>
             <h2 class="portfolio-caption">Organic Food</h2>
             <p class="portfolio-paragraph">Web Site</p></a></li>
-            <li><a href="" class="link"><img src="./images/img9.jpg" alt="coffe"  width="360" height="300"/>
+            <li class="border"><a href="" class="link"><img src="./images/img9.jpg" alt="coffe"  width="360" height="300"/>
             <h2 class="portfolio-caption">Fresh Coffee</h2>
             <p class="portfolio-paragraph">Web Site</p></a></li>
              </ul>
+          </div>
         </section>
     </main>
     <footer class="footer">
+      <div class="container">
         <a href="" class="footer-logo link"><span class="footer-span link">Web</span>Studio</a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
       </footer>
 </body>
 </html>
