--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>WebStudio</title>
-          <link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
+          <link rel="preconnect" href="https://fonts.googleapis.com"/>
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
           <link rel="stylesheet" href="./css/style.css"/>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
          
   </head>
   <body class="body">
@@ -30,7 +31,7 @@
                 <main>
                     <section class="section">
                         <div class="container">
-                        <h1 class="section-headline">Effective Solutions Your Business</h1>
+                        <h1 class="section-headline">Effective Solutions for Your Business</h1>
                     <button type="button" class="section-btn">Order Service</button>
                     </div>         
                 </section> 
@@ -81,8 +82,8 @@
                       </main>
                       <footer class="footer">
                         <div class="container">
-                        <a href="" class="footer-logo link"><span class="footer-span link">Web</span>Studio</a>
-                        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                        <div class="width"><a href="" class="footer-logo link"><span class="footer-span link">Web</span>Studio</a>
+                        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p></div>
                         </div>
                       </footer>
                 </body>
