--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
-          <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
 </head>
 <body class="body">
     <header class="header">
@@ -37,41 +39,41 @@
         <li class="list"><button class="portfolio-button behind" type="button">Marketing</button></li>
         </ul> 
          <ul class="portfolio-navigation list">
-            <li class="border"><a href="" class="link"><img src="./images/img1.jpg" alt="menu"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Banking App Interface Concept</h2>
-            <p class="portfolio-paragraph">App</p></a></li>
-            <li class="border"><a href="" class="link"><img src="./images/img2.jpg" alt="paywithphone"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Cashless Payment</h2>
-            <p class="portfolio-paragraph link">Marketing</p></a></li>
-            <li class="border"><a href="" class="link" class="link"><img src="./images/img3.jpg" alt="computerwithphone"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Meditaion App</h2>
-            <p class="portfolio-paragraph">App</p></a></li>
-            <li class="border"><a href="" class="link"><img src="./images/img4.jpg" alt="car"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Taxi Service</h2>
-            <p class="portfolio-paragraph">Marketing</p></a></li>
-            <li class="border"><a href="" class="link"><img src="./images/img5.jpg" alt="gallery"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Screen Illustrations</h2>
-            <p class="portfolio-paragraph">Design</p></a></li>
-            <li class="border"><a href="" class="link"><img src="./images/img6.jpg" alt="listen"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Online Courses</h2>
-            <p class="portfolio-paragraph">Marketing</p></a></li>
-            <li class="border"><a href="" class="link"><img src="./images/img7.jpg" alt="site"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Instagram Stories Concept</h2>
-            <p class="portfolio-paragraph">Design</p></a></li>
-            <li class="border"><a href="" class="link"><img src="./images/img8.jpg" alt="food"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Organic Food</h2>
-            <p class="portfolio-paragraph">Web Site</p></a></li>
-            <li class="border"><a href="" class="link"><img src="./images/img9.jpg" alt="coffe"  width="360" height="300"/>
-            <h2 class="portfolio-caption">Fresh Coffee</h2>
-            <p class="portfolio-paragraph">Web Site</p></a></li>
+            <li class="portfolio-width"><a href="" class="link"><img src="./images/img1.jpg" alt="menu"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Banking App Interface Concept</h2>
+            <p class="portfolio-paragraph">App</p></div></a></li>
+            <li class="portfolio-width"><a href="" class="link"><img src="./images/img2.jpg" alt="paywithphone"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Cashless Payment</h2>
+            <p class="portfolio-paragraph link">Marketing</p></div></a></li>
+            <li class="portfolio-width"><a href="" class="link" class="link"><img src="./images/img3.jpg" alt="computerwithphone"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Meditaion App</h2>
+            <p class="portfolio-paragraph">App</p></div></a></li>
+            <li class="portfolio-width"><a href="" class="link"><img src="./images/img4.jpg" alt="car"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Taxi Service</h2>
+            <p class="portfolio-paragraph">Marketing</p></div></a></li>
+            <li class="portfolio-width"><a href="" class="link"><img src="./images/img5.jpg" alt="gallery"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Screen Illustrations</h2>
+            <p class="portfolio-paragraph">Design</p></div></a></li>
+            <li class="portfolio-width"><a href="" class="link"><img src="./images/img6.jpg" alt="listen"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Online Courses</h2>
+            <p class="portfolio-paragraph">Marketing</p></div></a></li>
+            <li class="portfolio-width"><a href="" class="link"><img src="./images/img7.jpg" alt="site"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Instagram Stories Concept</h2>
+            <p class="portfolio-paragraph">Design</p></div></a></li>
+            <li class="portfolio-width"><a href="" class="link"><img src="./images/img8.jpg" alt="food"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Organic Food</h2>
+            <p class="portfolio-paragraph">Web Site</p></div></a></li>
+            <li class="portfolio-width"><a href="" class="link"><img src="./images/img9.jpg" alt="coffe"  width="360" height="300"/>
+            <div class="navigation"><h2 class="portfolio-caption">Fresh Coffee</h2>
+            <p class="portfolio-paragraph">Web Site</p></div></a></li>
              </ul>
           </div>
         </section>
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="" class="footer-logo link"><span class="footer-span link">Web</span>Studio</a>
-        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="width"><a href="" class="footer-logo link"><span class="footer-span link">Web</span>Studio</a>
+        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p></div>
       </div>
       </footer>
 </body>
