--- a/portfolio.html
+++ b/portfolio.html
@@ -39,31 +39,31 @@
         <li class="list"><button class="portfolio-button behind" type="button">Marketing</button></li>
         </ul> 
          <ul class="portfolio-navigation list">
-            <li class="portfolio-width"><a href="" class="link"><img src="./images/img1.jpg" alt="menu"  width="360" height="300"/>
+            <li><a href="" class="link"><img src="./images/img1.jpg" alt="menu"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Banking App Interface Concept</h2>
             <p class="portfolio-paragraph">App</p></div></a></li>
-            <li class="portfolio-width"><a href="" class="link"><img src="./images/img2.jpg" alt="paywithphone"  width="360" height="300"/>
+            <li><a href="" class="link"><img src="./images/img2.jpg" alt="paywithphone"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Cashless Payment</h2>
             <p class="portfolio-paragraph link">Marketing</p></div></a></li>
-            <li class="portfolio-width"><a href="" class="link" class="link"><img src="./images/img3.jpg" alt="computerwithphone"  width="360" height="300"/>
+            <li><a href="" class="link" class="link"><img src="./images/img3.jpg" alt="computerwithphone"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Meditaion App</h2>
             <p class="portfolio-paragraph">App</p></div></a></li>
-            <li class="portfolio-width"><a href="" class="link"><img src="./images/img4.jpg" alt="car"  width="360" height="300"/>
+            <li><a href="" class="link"><img src="./images/img4.jpg" alt="car"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Taxi Service</h2>
             <p class="portfolio-paragraph">Marketing</p></div></a></li>
-            <li class="portfolio-width"><a href="" class="link"><img src="./images/img5.jpg" alt="gallery"  width="360" height="300"/>
+            <li><a href="" class="link"><img src="./images/img5.jpg" alt="gallery"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Screen Illustrations</h2>
             <p class="portfolio-paragraph">Design</p></div></a></li>
-            <li class="portfolio-width"><a href="" class="link"><img src="./images/img6.jpg" alt="listen"  width="360" height="300"/>
+            <li><a href="" class="link"><img src="./images/img6.jpg" alt="listen"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Online Courses</h2>
             <p class="portfolio-paragraph">Marketing</p></div></a></li>
-            <li class="portfolio-width"><a href="" class="link"><img src="./images/img7.jpg" alt="site"  width="360" height="300"/>
+            <li><a href="" class="link"><img src="./images/img7.jpg" alt="site"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Instagram Stories Concept</h2>
             <p class="portfolio-paragraph">Design</p></div></a></li>
-            <li class="portfolio-width"><a href="" class="link"><img src="./images/img8.jpg" alt="food"  width="360" height="300"/>
+            <li><a href="" class="link"><img src="./images/img8.jpg" alt="food"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Organic Food</h2>
             <p class="portfolio-paragraph">Web Site</p></div></a></li>
-            <li class="portfolio-width"><a href="" class="link"><img src="./images/img9.jpg" alt="coffe"  width="360" height="300"/>
+            <li><a href="" class="link"><img src="./images/img9.jpg" alt="coffe"  width="360" height="300"/>
             <div class="navigation"><h2 class="portfolio-caption">Fresh Coffee</h2>
             <p class="portfolio-paragraph">Web Site</p></div></a></li>
              </ul>
