--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
           <link rel="preconnect" href="https://fonts.googleapis.com"/>
           <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
           <link rel="stylesheet" href="./css/style.css"/>
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
-         
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />"     
   </head>
   <body class="body">
       <header class="header">
@@ -54,9 +53,9 @@
                       <div class="container">
                         <h2 class="image-caption">What are we doing</h2>
                         <ul class="image-list list">
-                        <li class="link"><img src="./images/imagine1.jpg" alt="computer" width="360" height="300"/></li>
-                        <li class="link"><img src="./images/imagine2.jpg" alt="computer" width="360" height="300"/></li>
-                        <li class="link"><img src="./images/imagine3.jpg" alt="phoneinhand" width="360" height="300"/></li>
+                        <li class="link image-navigation"><img src="./images/imagine1.jpg" alt="computer" width="360" height="300"/></li>
+                        <li class="link image-navigation"><img src="./images/imagine2.jpg" alt="computer" width="360" height="300"/></li>
+                        <li class="link image-navigation"><img src="./images/imagine3.jpg" alt="phoneinhand" width="360" height="300"/></li>
                         </ul>
                       </div>
                     </section>
@@ -65,17 +64,17 @@
                     <h2 class="info-pre-caption">Our Team</h2>
                     <ul class="info-list list">
                     <li class="info-item"><img src="./images/img2.1.jpg" alt="it"/>
-                    <h3 class="info-caption">Mark Guerrero</h3> 
-                    <p class="info-paragraph">Product Designer</p></li>
+                    <div class="info-navigation"><h3 class="info-caption">Mark Guerrero</h3> 
+                    <p class="info-paragraph">Product Designer</p></div></li>
                     <li class="info-item"><img src="./images/img2.2.jpg" alt="it"/>
-                    <h3 class="info-caption">Tom Ford</h3> 
-                    <p class="info-paragraph">Frontend Developer</p></li>
+                    <div class="info-navigation"><h3 class="info-caption">Tom Ford</h3> 
+                    <p class="info-paragraph">Frontend Developer</p></div></li>
                     <li class="info-item"><img src="./images/img2.3.jpg" alt="it"/>
-                    <h3 class="info-caption">Camila Garcia</h3> 
-                    <p class="info-paragraph">Marketing</p></li>
+                    <div class="info-navigation"><h3 class="info-caption">Camila Garcia</h3> 
+                    <p class="info-paragraph">Marketing</p></div></li>
                     <li class="info-item"><img src="./images/img2.4.jpg" alt="it"/>
-                    <h3 class="info-caption">Daniel Wilson</h3> 
-                    <p class="info-paragraph">UI Designer</p></li>
+                    <div class="info-navigation"><h3 class="info-caption">Daniel Wilson</h3> 
+                    <p class="info-paragraph">UI Designer</p></div></li>
                        </ul>
                       </div>
                     </section>
