--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <link rel="preconnect" href="https://fonts.googleapis.com"/>
           <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
           <link rel="stylesheet" href="./css/style.css"/>
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />"     
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
   </head>
   <body class="body">
       <header class="header">
@@ -53,9 +53,9 @@
                       <div class="container">
                         <h2 class="image-caption">What are we doing</h2>
                         <ul class="image-list list">
-                        <li class="link image-navigation"><img src="./images/imagine1.jpg" alt="computer" width="360" height="300"/></li>
-                        <li class="link image-navigation"><img src="./images/imagine2.jpg" alt="computer" width="360" height="300"/></li>
-                        <li class="link image-navigation"><img src="./images/imagine3.jpg" alt="phoneinhand" width="360" height="300"/></li>
+                        <li class="link"><img src="./images/imagine1.jpg" alt="computer" width="360" height="300"/></li>
+                        <li class="link"><img src="./images/imagine2.jpg" alt="computer" width="360" height="300"/></li>
+                        <li class="link"><img src="./images/imagine3.jpg" alt="phoneinhand" width="360" height="300"/></li>
                         </ul>
                       </div>
                     </section>
