--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                       <div class="container">
                         <h2 class="image-caption">What are we doing</h2>
                         <ul class="image-list list">
-                        <li class="link"><img src="./images/imagine1.jpg" alt="computer" width="360" height="300"/></li>
-                        <li class="link"><img src="./images/imagine2.jpg" alt="computer" width="360" height="300"/></li>
-                        <li class="link"><img src="./images/imagine3.jpg" alt="phoneinhand" width="360" height="300"/></li>
+                        <li class="link image-item" ><img src="./images/imagine1.jpg" alt="computer" width="360" height="300"/></li>
+                        <li class="link image-item" ><img src="./images/imagine2.jpg" alt="computer" width="360" height="300"/></li>
+                        <li class="link image-item" ><img src="./images/imagine3.jpg" alt="phoneinhand" width="360" height="300"/></li>
                         </ul>
                       </div>
                     </section>
@@ -63,16 +63,16 @@
                       <div class="container">
                     <h2 class="info-pre-caption">Our Team</h2>
                     <ul class="info-list list">
-                    <li class="info-item"><img src="./images/img2.1.jpg" alt="it"/>
+                    <li class="info-item"><img src="./images/img2.1.jpg" alt="it" width="264" height="260"/>
                     <div class="info-navigation"><h3 class="info-caption">Mark Guerrero</h3> 
                     <p class="info-paragraph">Product Designer</p></div></li>
-                    <li class="info-item"><img src="./images/img2.2.jpg" alt="it"/>
+                    <li class="info-item"><img src="./images/img2.2.jpg" alt="it" width="264" height="260"/>
                     <div class="info-navigation"><h3 class="info-caption">Tom Ford</h3> 
                     <p class="info-paragraph">Frontend Developer</p></div></li>
-                    <li class="info-item"><img src="./images/img2.3.jpg" alt="it"/>
+                    <li class="info-item"><img src="./images/img2.3.jpg" alt="it" width="264" height="260"/>
                     <div class="info-navigation"><h3 class="info-caption">Camila Garcia</h3> 
                     <p class="info-paragraph">Marketing</p></div></li>
-                    <li class="info-item"><img src="./images/img2.4.jpg" alt="it"/>
+                    <li class="info-item"><img src="./images/img2.4.jpg" alt="it" width="264" height="260"/>
                     <div class="info-navigation"><h3 class="info-caption">Daniel Wilson</h3> 
                     <p class="info-paragraph">UI Designer</p></div></li>
                        </ul>
